add oauth server

--- a/serverless.yml
+++ b/serverless.yml
@@ -131,6 +131,13 @@ functions:
           method: get
           cors: true
 
+  oauth2callback:
+    handler: oauth_handler.main
+    events:
+      - http:
+          path: oauth2callback
+          method: get
+          cors: true          
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
