--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "query-string": "^5.0.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "request-promise-native": "^1.0.5"
   }
 }
