--- a/serverless.yml
+++ b/serverless.yml
@@ -137,7 +137,14 @@ functions:
       - http:
           path: oauth2callback
           method: get
-          cors: true          
+          cors: true
+  userinfo:
+    handler: userinfo_handler.main
+    events:
+      - http:
+          path: userinfo
+          method: put
+          cors: true        
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
