move to new aws

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "serverless_deploy": "serverless deploy -v",
     "serverless_package": "npm run transpile && serverless package",
     "serverless_destroy": "serverless remove",
-    "create": "npm run transpile && claudia create --name MiraMenuB2C --region us-east-1 --api-module build/app --version dev --no-optional-dependencies",
-    "release": "claudia set-version --version v1",
+    "create": "npm run transpile && claudia create --name MiraMenuB2C --region us-west-2 --api-module build/app --version dev --no-optional-dependencies",
+    "release": "claudia set-version --version prod",
     "deploy": "npm run transpile && claudia update --version dev --set-env NODE_ENV=production --no-optional-dependencies",
     "start": "npm run transpile && cross-env NODE_ENV=development node build/app.js",
     "help": "claudia --help",
