--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "claudia-api-builder": "^2.5.1",
     "lodash": "^4.17.4",
     "query-string": "^5.0.0",
+    "redis": "^2.8.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "request-promise-native": "^1.0.5"
