--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "claudia-api-builder": "^2.5.1",
+    "elasticsearch": "^14.2.1",
     "lodash": "^4.17.4",
     "query-string": "^5.0.0",
     "redis": "^2.8.0",
