--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,12 @@ services:
     volumes:
       - ~/.aws:/root/.aws
     ports:
-      - "8081:8081"
+      - "80:80"
+    healthcheck:
+      test: curl --fail http://localhost/v1 || exit 1
+      interval: 10sec
+      timeout: 3s
+      retries: 3
     command: npm start
 #  web:
 #    build: .
