--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "supertest": "^3.3.0"
   },
   "dependencies": {
+    "async-redis": "^1.1.5",
     "aws-sdk": "^2.330.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
